[gd_scene load_steps=24 format=3 uid="uid://c225pxxfwhqri"]

[ext_resource type="Script" path="res://scenes/mim.gd" id="1_3he40"]
[ext_resource type="Texture2D" uid="uid://78m8clk5a6jo" path="res://sprites/mimic.png" id="1_xtftr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u0v4d"]
size = Vector2(27, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lnef"]
atlas = ExtResource("1_xtftr")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcitg"]
atlas = ExtResource("1_xtftr")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_igbj6"]
atlas = ExtResource("1_xtftr")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_brdex"]
atlas = ExtResource("1_xtftr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qicv"]
atlas = ExtResource("1_xtftr")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2au2p"]
atlas = ExtResource("1_xtftr")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_30fcv"]
atlas = ExtResource("1_xtftr")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_chxeo"]
atlas = ExtResource("1_xtftr")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_02lx3"]
atlas = ExtResource("1_xtftr")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdxeb"]
atlas = ExtResource("1_xtftr")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nfb5"]
atlas = ExtResource("1_xtftr")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmmuh"]
atlas = ExtResource("1_xtftr")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_336rd"]
atlas = ExtResource("1_xtftr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_agvvn"]
atlas = ExtResource("1_xtftr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jg83"]
atlas = ExtResource("1_xtftr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_laa68"]
atlas = ExtResource("1_xtftr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajagj"]
atlas = ExtResource("1_xtftr")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_y3h0r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lnef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcitg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_igbj6")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_brdex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qicv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2au2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30fcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chxeo")
}],
"loop": true,
"name": &"reversetr",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_02lx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdxeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nfb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmmuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_336rd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_336rd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_336rd")
}],
"loop": true,
"name": &"transforming",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_agvvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jg83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_laa68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajagj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agvvn")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_cbtns"]
radius = 183.025

[sub_resource type="CircleShape2D" id="CircleShape2D_2m2dy"]
radius = 17.0294

[node name="mimic" type="Node2D" groups=["enemy"]]

[node name="mim" type="CharacterBody2D" parent="." groups=["enemy"]]
disable_mode = 2
script = ExtResource("1_3he40")

[node name="CollisionShape2D" type="CollisionShape2D" parent="mim"]
position = Vector2(0.5, 3.5)
shape = SubResource("RectangleShape2D_u0v4d")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="mim"]
sprite_frames = SubResource("SpriteFrames_y3h0r")
frame_progress = 0.949552

[node name="Area2D" type="Area2D" parent="mim"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mim/Area2D"]
shape = SubResource("CircleShape2D_cbtns")

[node name="attack" type="Area2D" parent="mim"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mim/attack"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_2m2dy")

[connection signal="body_entered" from="mim/Area2D" to="mim" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="mim/Area2D" to="mim" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="mim/attack" to="mim" method="_on_attack_body_entered"]
